High contrast fixes

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -37,7 +37,6 @@
     }
 
     svg {
-        color: var(--foreground-colour);
         display: block;
         flex-shrink: 0;
     }
@@ -424,7 +423,6 @@
     -webkit-font-smoothing: antialiased;
 
     svg {
-        color: var(--foreground-colour);
         margin-right: 7px;
     }
 
